--- a/RPshop/src/app/pages/home/home.component.html
+++ b/RPshop/src/app/pages/home/home.component.html
@@ -3,8 +3,21 @@
         <app-categories (showCategory)="onShowCategory($event)"></app-categories>
         <main class="flex-1 p-4">
             <app-products-header (columnsCountChange)="onColumnsCountChange($event)"></app-products-header>
-            test {{ category }}
-            <section>
+            <mat-grid-list gutterSize="40" [cols]="cols" [rowHeight]="rowHeight">
+                <mat-grid-tile>
+                    <app-product-box class="w-full" [fullWidthMode]="cols === 1"></app-product-box>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <app-product-box class="w-full" [fullWidthMode]="cols === 1"></app-product-box>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <app-product-box class="w-full" [fullWidthMode]="cols === 1"></app-product-box>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <app-product-box class="w-full" [fullWidthMode]="cols === 1"></app-product-box>
+                </mat-grid-tile>
+            </mat-grid-list>
+            <!-- <section>
                 <h2 class="text-lg font-semibold mb-4">Popular Products</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     <div class="flex flex-col items-center text-center">
@@ -36,7 +49,7 @@
                         <p class="mt-1 text-gray-500">$99.99</p>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
 </div>
