--- a/RPshop/src/app/pages/home/components/product-box/product-box.component.html
+++ b/RPshop/src/app/pages/home/components/product-box/product-box.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="flex justify-between p-3">
                 <span class="font-bold">{{ "150" | currency:"EUR" }}</span>
-                <button>
+                <button (click)="onAddToCart()">
                     <mat-icon class="text-gray-400">add_shopping_cart</mat-icon>
                 </button>
             </div>
