--- a/RPshop/src/app/pages/cart/cart.component.html
+++ b/RPshop/src/app/pages/cart/cart.component.html
@@ -29,11 +29,11 @@
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let item">
                 <div class="flex items-center">
-                    <button mat-icon-button>
+                    <button (click)="onReduceQuantity(item)" mat-icon-button>
                         <mat-icon>remove</mat-icon>
                     </button>
                     <span> {{ item.quantity }}</span>
-                    <button mat-icon-button>
+                    <button (click)="onAddQuantity(item)" mat-icon-button>
                         <mat-icon>add</mat-icon>
                     </button>
                 </div>
@@ -53,12 +53,12 @@
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>
-                <button mat-raised-button color="warn" class="float-right">
+                <button (click)="onClearCart()" mat-raised-button color="warn" class="float-right">
                     Clear Cart
                 </button>
             </th>
             <td mat-cell *matCellDef="let item">
-                <button mat-mini-fab color="warn" class="float-right">
+                <button (click)="onRemoveFromCart(item)" mat-mini-fab color="warn" class="float-right">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
