--- a/RPshop/src/app/pages/cart/cart.component.html
+++ b/RPshop/src/app/pages/cart/cart.component.html
@@ -14,7 +14,7 @@
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let item">
-                <span class="truncate max-w-xs block">{{ item.name }}</span>
+                <span class="truncate hover:whitespace-normal max-w-xs block">{{ item.name }}</span>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
