fix: product box styling

--- a/RPshop/src/app/pages/home/components/product-box/product-box.component.html
+++ b/RPshop/src/app/pages/home/components/product-box/product-box.component.html
@@ -1,12 +1,16 @@
 <mat-card *ngIf="product" [ngClass]="{'text-center max-w-[200px]': !fullWidthMode}">
-    <div [ngClass]="{ flex: fullWidthMode }">
-        <img class="mx-auto p-3 rounded-2xl" [ngClass]="{ 'h-[200px]': !fullWidthMode, 'h-[360px]': fullWidthMode }"
-            src="{{ product.image }}" />
+    <div [ngClass]="{ 'flex': fullWidthMode }">
+        <div
+            [ngClass]="{ 'h-[200px]': !fullWidthMode, 'h-[360px] w-[360px] flex items-center justify-center': fullWidthMode }">
+            <img class="mx-auto p-3 rounded-2xl"
+                [ngClass]="{ 'h-[200px]': !fullWidthMode, 'max-h-[360px] max-w-[360px]': fullWidthMode }"
+                src="{{ product.image }}" />
+        </div>
         <div class="w-full" [ngClass]="{ 'px-8 flex flex-col justify-between': fullWidthMode }">
             <div class="p-3">
                 <h5>{{ product.category }}</h5>
                 <p class="truncate hover:whitespace-normal">{{ product.title }}</p>
-                <p *ngIf="fullWidthMode">{{ product.description }}</p>
+                <p *ngIf="fullWidthMode" class="md:w-[700px] text-gray-500">{{ product.description }}</p>
             </div>
             <div class="flex justify-between p-3">
                 <span class="font-bold">{{ product.price | currency:"EUR" }}</span>
