--- a/RPshop/src/app/pages/home/components/categories/categories.component.html
+++ b/RPshop/src/app/pages/home/components/categories/categories.component.html
@@ -1,4 +1,4 @@
-<aside *ngIf="categories" class="hidden lg:block border-r min-h-screen bg-gray-100/40 dark:bg-gray-800/40">
+<aside *ngIf="categories" class="hidden lg:block border-r min-h-screen bg-gray-100/40 dark:bg-gray-800/40 sticky top-0">
     <div class="flex flex-col gap-4 items-start py-2 px-4">
         <h2 class="text-lg font-bold">Categories</h2>
         <mat-selection-list [multiple]="false">
