--- a/RPshop/src/app/components/assistant/assistant.component.html
+++ b/RPshop/src/app/components/assistant/assistant.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-col shadow-inner bg-gray-100 dark:bg-gray-900">
-    <main class="flex-1 overflow-y-auto p-4 space-y-4" [ngClass]="{ 'shadow-md': !assistantOn }">
+    <main class="flex-1 overflow-y-auto p-4 space-y-4"
+        [ngClass]="{ 'shadow-md': !assistantOn, 'divide-y divide-solid': systemResultRecieved }">
         <div class="flex justify-between pr-3">
             <div class="flex items-center gap-2">
                 <button *ngIf="!speech.listening" (click)="speech.startListening()" class="cursor-pointer">
@@ -8,20 +9,29 @@
                 <button *ngIf="speech.listening" (click)="speech.abort()" class="cursor-pointer">
                     <img src="/assets/images/mic-fill.svg" class="w-6 h-6">
                 </button>
-                <!-- <p class="text-sm font-medium !m-0">Recognized voice command: Turn off the lights</p> -->
                 <p class="text-sm font-medium !m-0">{{btnLabel}}</p>
             </div>
-            <mat-icon *ngIf="this.assistantOn" (click)="assistantOn = false" class="float-right">expand_less</mat-icon>
-            <mat-icon *ngIf="!this.assistantOn" (click)="assistantOn = true" class="float-right">expand_more</mat-icon>
+            <mat-icon *ngIf="this.assistantOn" (click)="assistantOn = false"
+                class="cursor-pointer">expand_less</mat-icon>
+            <mat-icon *ngIf="!this.assistantOn" (click)="assistantOn = true"
+                class="cursor-pointer">expand_more</mat-icon>
         </div>
-        <div *ngIf="this.assistantOn">
-            <div *ngFor="let msg of systemMsg" class="flex items-center gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="h-6 w-6 text-green-500">
-                    <polyline points="20 6 9 17 4 12"></polyline>
-                </svg>
-                <p class="text-sm font-normal !m-0">System response: {{ msg }}</p>
+        <div *ngIf="this.assistantOn" [ngClass]="{ '!mt-0': !systemResultRecieved, 'pt-2': systemResultRecieved }">
+            <div *ngFor="let msg of systemResult" class="flex items-center gap-2">
+                <div>
+                    <svg *ngIf="msg.type === 'error'" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="h-6 w-6 text-red-500">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                    <svg *ngIf="msg.type === 'result'" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="h-6 w-6 text-green-500">
+                        <polyline points="20 6 9 17 4 12"></polyline>
+                    </svg>
+                </div>
+                <p class="text-sm font-normal !m-0">System response: {{ msg.message }}</p>
             </div>
         </div>
     </main>
@@ -55,6 +65,10 @@
             <div
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Go to ... ( Home, Cart, Checkout )
+            </div>
+            <div
+                class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
+                Stop listening
             </div>
         </div>
     </footer>
