--- a/RPshop/src/app/components/assistant/assistant.component.html
+++ b/RPshop/src/app/components/assistant/assistant.component.html
@@ -11,10 +11,12 @@
                 </button>
                 <p class="text-sm font-medium !m-0">{{btnLabel}}</p>
             </div>
-            <mat-icon *ngIf="this.assistantOn" (click)="assistantOn = false"
-                class="cursor-pointer">expand_less</mat-icon>
-            <mat-icon *ngIf="!this.assistantOn" (click)="assistantOn = true"
-                class="cursor-pointer">expand_more</mat-icon>
+            <button *ngIf="this.assistantOn" (click)="assistantOn = false" class="cursor-pointer">
+                <mat-icon>expand_less</mat-icon>
+            </button>
+            <button *ngIf="!this.assistantOn" (click)="assistantOn = true" class="cursor-pointer">
+                <mat-icon>expand_more</mat-icon>
+            </button>
         </div>
         <div *ngIf="this.assistantOn" [ngClass]="{ '!mt-0': !systemResultRecieved, 'pt-2': systemResultRecieved }">
             <div *ngFor="let msg of systemResult" class="flex items-center gap-2">
@@ -57,6 +59,10 @@
             <div
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Change layout
+            </div>
+            <div
+                class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
+                Scroll up / down
             </div>
             <div
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
