--- a/RPshop/src/app/components/assistant/assistant.component.html
+++ b/RPshop/src/app/components/assistant/assistant.component.html
@@ -40,25 +40,37 @@
     <footer *ngIf="this.assistantOn" class="flex items-center justify-between p-4 bg-white shadow-md dark:bg-gray-800">
         <p class="text-sm !m-0">Available voice commands:</p>
         <div class="flex gap-2">
-            <div
+            <div *ngIf="href === '/home'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Add ...
             </div>
-            <div
+            <div *ngIf="href === '/home'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Show category ...
             </div>
-            <div
+            <div *ngIf="href === '/home'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Sort by ...
             </div>
-            <div
+            <div *ngIf="href === '/home'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Show ... items
             </div>
-            <div
+            <div *ngIf="href === '/home'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
                 Change layout
+            </div>
+            <div *ngIf="href === '/cart'"
+                class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
+                Clear cart
+            </div>
+            <div *ngIf="href === '/cart'"
+                class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
+                Quantity up / down ...
+            </div>
+            <div *ngIf="href === '/cart'"
+                class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
+                Remove / Delete ...
             </div>
             <div
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
