fix: changed quantity command

--- a/RPshop/src/app/components/assistant/assistant.component.html
+++ b/RPshop/src/app/components/assistant/assistant.component.html
@@ -66,7 +66,7 @@
             </div>
             <div *ngIf="href === '/cart'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
-                Quantity up / down ...
+                Increase / Decrease quantity ...
             </div>
             <div *ngIf="href === '/cart'"
                 class="inline-flex items-center rounded-full whitespace-nowrap border px-2.5 py-0.5 w-fit text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-black text-white hover:bg-black/80">
