--- a/RPshop/src/app/pages/home/components/products-header/products-header.component.html
+++ b/RPshop/src/app/pages/home/components/products-header/products-header.component.html
@@ -34,13 +34,13 @@
                     </button>
                 </mat-menu>
             </div>
-            <button class="pl-3" (click)="onColumnsUpdate(1)">
+            <button aria-label="view 1 column" class="pl-3" (click)="onColumnsUpdate(1)">
                 <mat-icon>view_list</mat-icon>
             </button>
-            <button (click)="onColumnsUpdate(3)">
+            <button aria-label="view 3 columns" (click)="onColumnsUpdate(3)">
                 <mat-icon>view_module</mat-icon>
             </button>
-            <button class="pr-3" (click)="onColumnsUpdate(4)">
+            <button aria-label="view 4 columns" class="pr-3" (click)="onColumnsUpdate(4)">
                 <mat-icon>view_comfy</mat-icon>
             </button>
         </div>
